Fixed alignment description of the search result

--- a/app/assets/stylesheets/help-central/_search.scss
+++ b/app/assets/stylesheets/help-central/_search.scss
@@ -7,7 +7,7 @@
     font-weight: lighter;
     line-height: inherit;
   }
-  
+
   p {
     margin-top: 3px;
   }
@@ -21,7 +21,7 @@
     }
 
   }
-  
+
   li {
     h6 {
       display: inline;
@@ -32,7 +32,7 @@
     color: $gray5;
     font-weight: lighter;
   }
-  
+
   .guide-subtopic {
     color: $gray5;
     padding-top: 20px;
@@ -79,9 +79,15 @@
 
 
 .search-results {
+
+  span {
+    text-align: center;
+    display: block;
+  }
+
   p {
     width: 100%;
-    text-align: center;
+    text-align: left;
     margin-bottom: 20px;
   }
 }
